# avrduinolibs

./: CMakeLists.txt  README  avrduinolibs.kdev4
.kdev4/: avrduinolibs.kdev4
corelibs/: WProgram.h  WString.cpp  WString.h  Wire.cpp  hserial.c  hserial.h  pins_arduino.c  pins_arduino.h  pinterrupt.h  wiring_analog.c
exampleProjects/: simpleprint.cpp
test/: .kdev_include_paths
